feat: refactoring openapi (#71)
* feat: refactoring openapi

* feat: update internal openapi

* feat: add parameter value to openapi def.

* feat: update to new internal api
