# src/main/java/org/tkit/onecx/parameters/bff/rs/controllers/HistoryRestController.java
@@ -13,12 +13,12 @@ import org.tkit.onecx.parameters.bff.rs.mappers.ParametersMapper;
 import org.tkit.quarkus.log.cdi.LogService;
 
 import gen.org.tkit.onecx.parameters.bff.rs.internal.HistoriesApiService;
-import gen.org.tkit.onecx.parameters.bff.rs.internal.model.ParameterHistoryCountCriteriaDTO;
-import gen.org.tkit.onecx.parameters.bff.rs.internal.model.ParameterHistoryCriteriaDTO;
+import gen.org.tkit.onecx.parameters.bff.rs.internal.model.HistoryCountCriteriaDTO;
+import gen.org.tkit.onecx.parameters.bff.rs.internal.model.HistoryCriteriaDTO;
 import gen.org.tkit.onecx.parameters.clients.api.HistoriesApi;
-import gen.org.tkit.onecx.parameters.clients.model.ParameterHistory;
-import gen.org.tkit.onecx.parameters.clients.model.ParameterHistoryCount;
-import gen.org.tkit.onecx.parameters.clients.model.ParameterHistoryPageResult;
+import gen.org.tkit.onecx.parameters.clients.model.History;
+import gen.org.tkit.onecx.parameters.clients.model.HistoryCount;
+import gen.org.tkit.onecx.parameters.clients.model.HistoryPageResult;
 
 @ApplicationScoped
 @Transactional(value = Transactional.TxType.NOT_SUPPORTED)
@@ -36,35 +36,35 @@ public class HistoryRestController implements HistoriesApiService {
     ExceptionMapper exceptionMapper;
 
     @Override
-    public Response getAllParametersHistory(ParameterHistoryCriteriaDTO criteriaDTO) {
+    public Response getAllHistory(HistoryCriteriaDTO criteriaDTO) {
         var criteria = mapper.map(criteriaDTO);
         try (Response response = client.getAllParametersHistory(criteria)) {
             return Response.status(response.getStatus())
-                    .entity(mapper.map(response.readEntity(ParameterHistoryPageResult.class))).build();
+                    .entity(mapper.map(response.readEntity(HistoryPageResult.class))).build();
         }
     }
 
     @Override
-    public Response getAllParametersHistoryLatest(ParameterHistoryCriteriaDTO criteriaDTO) {
+    public Response getAllHistoryLatest(HistoryCriteriaDTO criteriaDTO) {
         try (Response response = client.getAllParametersHistoryLatest(mapper.map(criteriaDTO))) {
-            var result = mapper.map(response.readEntity(ParameterHistoryPageResult.class));
+            var result = mapper.map(response.readEntity(HistoryPageResult.class));
             return Response.status(response.getStatus()).entity(result).build();
         }
     }
 
     @Override
-    public Response getParametersHistoryById(String id) {
+    public Response getHistoryById(String id) {
         try (Response response = client.getParametersHistoryById(id)) {
             return Response.status(response.getStatus())
-                    .entity(mapper.map(response.readEntity(ParameterHistory.class))).build();
+                    .entity(mapper.map(response.readEntity(History.class))).build();
         }
     }
 
     @Override
-    public Response getCountsByCriteria(ParameterHistoryCountCriteriaDTO criteriaDTO) {
+    public Response getCountsByCriteria(HistoryCountCriteriaDTO criteriaDTO) {
         var criteria = mapper.map(criteriaDTO);
         try (Response response = client.getCountsByCriteria(criteria)) {
-            return Response.status(response.getStatus()).entity(mapper.map(response.readEntity(ParameterHistoryCount[].class)))
+            return Response.status(response.getStatus()).entity(mapper.map(response.readEntity(HistoryCount[].class)))
                     .build();
         }
     }
