# src/main/openapi/openapi-bff.yaml
@@ -18,20 +18,20 @@ paths:
             - read
       tags:
         - histories
-      description: Find all parameters history
-      operationId: getAllParametersHistory
+      description: Find all history entries
+      operationId: getAllHistory
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ParameterHistoryCriteria'
+              $ref: '#/components/schemas/HistoryCriteria'
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ParameterHistoryPageResult'
+                $ref: '#/components/schemas/HistoryPageResult'
         "400":
           description: Bad Request
           content:
@@ -52,7 +52,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ParameterHistoryCountCriteria'
+              $ref: '#/components/schemas/HistoryCountCriteria'
       responses:
         "200":
           description: OK
@@ -61,7 +61,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ParameterHistoryCount'
+                  $ref: '#/components/schemas/HistoryCount'
         "400":
           description: Bad Request
           content:
@@ -76,21 +76,21 @@ paths:
             - read
       tags:
         - histories
-      description: Find all parameters history latest
-      operationId: getAllParametersHistoryLatest
+      description: Find all latest history
+      operationId: getAllHistoryLatest
 
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ParameterHistoryCriteria'
+              $ref: '#/components/schemas/HistoryCriteria'
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ParameterHistoryPageResult'
+                $ref: '#/components/schemas/HistoryPageResult'
         "400":
           description: Bad Request
           content:
@@ -105,8 +105,8 @@ paths:
             - read
       tags:
         - histories
-      description: Find parameters history by Id
-      operationId: getParametersHistoryById
+      description: Find history by Id
+      operationId: getHistoryById
       parameters:
         - name: id
           in: path
@@ -119,7 +119,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ParameterHistory'
+                $ref: '#/components/schemas/History'
         "400":
           description: Bad Request
           content:
@@ -398,28 +398,22 @@ components:
     ParameterCreate:
       type: object
       required:
-        - key
+        - name
         - productName
         - applicationId
       properties:
-        key:
+        name:
+          type: string
+        displayName:
           type: string
         applicationId:
           type: string
         productName:
           type: string
         value:
-          type: string
+          $ref: '#/components/schemas/ParameterValue'
         description:
           type: string
-        unit:
-          type: string
-        rangeFrom:
-          format: int32
-          type: integer
-        rangeTo:
-          format: int32
-          type: integer
     Parameter:
       type: object
       properties:
@@ -440,24 +434,31 @@ components:
           example: 2022-03-10T12:15:50-04:00
         modificationUser:
           type: string
-        name:
-          type: string
         description:
           type: string
         applicationId:
           type: string
         productName:
           type: string
-        key:
+        name:
+          type: string
+        displayName:
           type: string
         value:
-          type: object
+          $ref: '#/components/schemas/ParameterValue'
         importValue:
-          type: object
-    ParameterHistory:
+          $ref: '#/components/schemas/ParameterValue'
+    ParameterValue:
+      oneOf:
+        - type: string
+        - type: number
+        - type: boolean
+        - type: integer
+        - type: object
+    History:
       type: object
       required:
-        - key
+        - name
         - productName
         - applicationId
         - id
@@ -483,24 +484,24 @@ components:
           type: string
         productName:
           type: string
-        key:
+        name:
           type: string
         usedValue:
-          type: object
+          $ref: '#/components/schemas/ParameterValue'
         defaultValue:
-          type: object
+          $ref: '#/components/schemas/ParameterValue'
         type:
           type: string
         instanceId:
           type: string
-    ParameterHistoryCriteria:
+    HistoryCriteria:
       type: object
       properties:
         applicationId:
           type: string
         productName:
           type: string
-        key:
+        name:
           type: string
         pageNumber:
           type: integer
@@ -514,7 +515,7 @@ components:
           type: array
           items:
             type: string
-    ParameterHistoryPageResult:
+    HistoryPageResult:
       type: object
       properties:
         totalElements:
@@ -533,7 +534,7 @@ components:
         stream:
           type: array
           items:
-            $ref: '#/components/schemas/ParameterHistory'
+            $ref: '#/components/schemas/History'
     ParameterPageResult:
       type: object
       properties:
@@ -557,23 +558,16 @@ components:
     ParameterUpdate:
       type: object
       properties:
-        value: {}
+        value:
+          $ref: '#/components/schemas/ParameterValue'
         description:
           type: string
-        unit:
+        displayName:
           type: string
-        rangeFrom:
-          format: int32
-          type: integer
-        rangeTo:
-          format: int32
-          type: integer
     Product:
       type: object
       properties:
         productName:
-          type: string
-        displayName:
           type: string
         applications:
           type: array
@@ -599,14 +593,14 @@ components:
           type: array
           items:
             type: string
-    ParameterHistoryCountCriteria:
+    HistoryCountCriteria:
       type: object
       properties:
         applicationId:
           type: string
         productName:
           type: string
-        key:
+        name:
           type: string
         pageNumber:
           format: int32
@@ -620,7 +614,7 @@ components:
           type: array
           items:
             type: string
-    ParameterHistoryCount:
+    HistoryCount:
       type: object
       properties:
         creationDate:
@@ -637,9 +631,9 @@ components:
           type: string
         productName:
           type: string
-        key:
-          type: string
         name:
+          type: string
+        displayName:
           type: string
         pageNumber:
           format: int32
